[tool.poetry]
name = "langchain-course"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.8"
deeplake = "^3.9.13"
openai = "^1.35.14"
tiktoken = "^0.4.0"
selenium = "^4.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
