[tool.poetry]
name = "langchain-course"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "0.1.4"
deeplake = "^3.9.13"
openai = "1.10.0"
tiktoken = "^0.7.0"
black = "^24.4.2"
google-api-python-client = "^2.137.0"
huggingface-hub = "^0.23.5"
transformers = "^4.42.4"
pypdf = "^4.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
